# DM2-Pipeline

./: .gitignore  .pylintrc  README.md  pyproject.toml
dagster_jaffle_restaurant/: defs.py
dagster_jaffle_restaurant/assets/: bronze_assets.py  gold_assets.py  silver_assets.py
dagster_jaffle_restaurant/resources/: duckdb_io_manager.py  http_client.py
